CHANGES IN VERSION 3.7.0
-------------------------

NEW FEATURES

    o (3.7.1) Add DispatchClass for keras model weights

DEPRECATED

    o (3.7.2) Deprecate display in favor of BiocHubsShiny; see vignette


CHANGES IN VERSION 3.5.0
-------------------------

NEW FEATURES

    o (3.5.2) Add dcf dispatchclass
    o (3.5.1) Add CompDb dispatchclass


CHANGES IN VERSION 3.3.0
-------------------------

NEW FEATURES

    o (3.3.6) Serialized S4 hub resources (AnnotationHub and ExperimentHub)
      are now passed thru updateObject() at load-time

USER-VISIBLE MODIFICATIONS

    o (3.3.8) Add instructions for creating a hub shared across multiple users
    o (3.3.2) Remove TESTING option as only needed to expose devel orgdb
    o (3.3.2) Change filter for orgdbs. orgdbs at release time will be stamped
    with devel (to be release) and then manually have biocversion added for the
    upcoming new devel. Filtering then based on biocversion number. This will
    expose devel orgdbs as soon as generated
    
BUG CORRECTION

    o (3.1.9) Fix broken test. Identical not appropriate. all present appropriate
    
CHANGES IN VERSION 3.1.0
-------------------------

MAJOR UPDATES

    o (3.1.2) In accordance with the deprecated caching location, upgraded to
    error/defunct from warning/deprecated in preparaion for removal of
    dependency next release


USER-VISIBLE MODIFICATIONS

    o (3.1.1) If there is a duplicate entry in the hub cache for a resource, hub
    code will no longer produce an ERROR. If the duplicate resource was not
    requested the duplicate is ignored. If the duplicate resource is requested,
    produce a warning for corrupt cache and continue with first found entry.
    o (3.1.3) Fix typo in message display 
    o (3.1.5) Deprecate the `display,Hub-method`

BUG CORRECTION

    o (3.1.7) Fix ERROR message for out-dated orgDbs 


CHANGES IN VERSION 2.99.0
-------------------------

MAJOR UPDATES
